--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -9,6 +9,7 @@
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "no-console": ["warn", { "allow": ["log"] }],
     "linebreak-style": "off",
-    "quotes": ["error", "double"]
+    "quotes": ["error", "double"],
+    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
   }
 }
