--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "eslint-config-prettier": "^10.1.8",
