--- a/backend/package.json
+++ b/backend/package.json
@@ -32,10 +32,12 @@
     "dotenv": "^17.2.3",
     "eslint-config-prettier": "^10.1.8",
     "express": "^5.1.0",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "validate": "^5.2.0",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "winston": "^3.18.3"
   }
 }
